adjustments for deployment

--- a/cfninit/laravel.conf
+++ b/cfninit/laravel.conf
@@ -1,8 +1,9 @@
+# Production
 server {
     listen 80 default_server;
     listen [::]:80;
-    server_name localhost;
-    root /var/www/app/public;
+    server_name *.barrhavendetailing.ca www.barrhavendetailing.ca;
+    root /var/www/barrhavendetailing.ca/public;
  
     add_header X-Frame-Options "SAMEORIGIN";
     add_header X-Content-Type-Options "nosniff";
@@ -16,10 +17,11 @@ server {
     }
  
     location = /favicon.ico { 
-      alias /var/www/app/public/favicon.ico; 
+      alias /var/www/barrhavendetailing.ca/public/favicon.ico; 
       access_log off; 
       log_not_found off; 
     }
+
     location = /robots.txt  { access_log off; log_not_found off; }
  
     error_page 404 /index.php;
