--- a/cfninit/laravel.conf
+++ b/cfninit/laravel.conf
@@ -7,6 +7,8 @@ server {
  
     add_header X-Frame-Options "SAMEORIGIN";
     add_header X-Content-Type-Options "nosniff";
+    add_header Strict-Transport-Security "max-age=31536000" always;
+    add_header Content-Security-Policy upgrade-insecure-requests;
  
     index index.php;
  
